--- a/install
+++ b/install
@@ -3,6 +3,11 @@
 directories=("X11" "nvim" "i3")
 
 for dir in "${directories[@]}"; do
-	rm -rf "$HOME/.config/$dir"
-	ln -s "$HOME/dotfiles/$dir" "$HOME/.config"
+	rm -rf "${HOME%/}/.config/$dir"
+	ln -s "${HOME%/}/dotfiles/$dir" "${HOME%/}/.config"
 done
+
+
+mkdir -p "${HOME%/}/.config/zsh"
+ln -sf "${HOME%/}/dotfiles/zsh/.zshenv" "$HOME"
+ln -sf "${HOME%/}/dotfiles/zsh/.zshrc" "${HOME%/}/.config/zsh"
