--- a/install
+++ b/install
@@ -1,13 +1,19 @@
 #!/usr/bin/env bash
 
 directories=("X11" "nvim" "i3")
-
 for dir in "${directories[@]}"; do
 	rm -rf "${HOME%/}/.config/$dir"
 	ln -s "${HOME%/}/dotfiles/$dir" "${HOME%/}/.config"
 done
 
-
 mkdir -p "${HOME%/}/.config/zsh"
 ln -sf "${HOME%/}/dotfiles/zsh/.zshenv" "$HOME"
 ln -sf "${HOME%/}/dotfiles/zsh/.zshrc" "${HOME%/}/.config/zsh"
+ln -sf "${HOME%/}/dotfiles/zsh/.zprofile" "${HOME%/}/.config/zsh"
+ln -sf "${HOME%/}/dotfiles/zsh/aliases.zsh" "${HOME%/}/.config/zsh"
+rm -rf "${HOME%/}/.config/zsh/external"
+ln -s "${HOME%/}/dotfiles/zsh/external" "${HOME%/}/.config/zsh"
+
+mkdir -p "${HOME%/}/.config/tmux"
+ln -sf "${HOME%/}/dotfiles/tmux/tmux.conf" "${HOME%/}/.config/tmux"
+ln -sf "${HOME%/}/dotfiles/tmux/style.conf" "${HOME%/}/.config/tmux"
