--- a/install
+++ b/install
@@ -16,3 +16,4 @@ ln -sf "$DOTFILES/.editorconfig" "$HOME"
 # Requirements
 mkdir -p "$XDG_DATA_HOME/tmux/plugins"
 mkdir -p "$XDG_CACHE_HOME/zsh"
+mkdir -p "$XDG_DATA_HOME/vim"
